--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -15,7 +15,10 @@ Globals:
     Environment:
       Variables:
         ENVIRONMENT: !Sub "${Environment}"
-        APP_CONFIG_ID: !Sub "core-back-${Environment}"
+        APP_CONFIG_ID: !If
+          - IsDevelopment
+          - !Sub "core-${Environment}"
+          - !Sub "core-back-${Environment}"
         APP_CONFIG_ENVIRONMENT_ID: !Sub "core-back-${Environment}"
         APP_CONFIG_PROFILE_ID: !Sub "core-back-${Environment}"
         DT_CONNECTION_BASE_URL: !If
@@ -800,8 +803,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -1123,8 +1126,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -1228,8 +1231,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -1339,8 +1342,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -1474,8 +1477,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -1628,8 +1631,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -1759,8 +1762,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: kmsAuditEventQueueEncryptionKeyPermission
               Effect: Allow
               Action:
@@ -1891,8 +1894,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -2000,8 +2003,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -2120,8 +2123,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -2372,8 +2375,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -2488,8 +2491,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -2613,8 +2616,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -2735,8 +2738,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -2958,8 +2961,8 @@ Resources:
               - appconfig:StartConfigurationSession
               - appconfig:GetLatestConfiguration
             Resource:
-              - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-              - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+              - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+              - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
           - Sid: EnforceStayinSpecificVpc
             Effect: Allow
             Action:
@@ -3139,8 +3142,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: kmsAuditEventQueueEncryptionKeyPermission
               Effect: Allow
               Action:
@@ -3222,8 +3225,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -3330,8 +3333,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -3428,8 +3431,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
             - Sid: EnforceStayinSpecificVpc
               Effect: Allow
               Action:
@@ -3596,8 +3599,8 @@ Resources:
                 - appconfig:StartConfigurationSession
                 - appconfig:GetLatestConfiguration
               Resource:
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}"
-                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
+                - !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
       Events:
         IPVCoreAnalyticsAPIJourneyTransitions:
           Type: Api
