--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
@@ -53,6 +53,7 @@ nestedJourneyStates:
     response:
       type: page
       pageId: sorry-technical-problem
+      context: kbvCriError
     events:
       tryAgain:
         targetState: PRE_EXPERIAN_PAGE
