PYIC-8731: Remove suffix for internal api key in dev env.

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -507,12 +507,8 @@ Resources:
     Condition: IsTestApiEnv
     Properties:
       Enabled: true
-      Value: !Sub
-        - "{{resolve:secretsmanager:CoreBackInternalTestingApiKey:SecretString}}${env}" # pragma: allowlist secret
-        - env: !If
-            - IsDevelopment
-            - !Sub "-${Environment}"
-            - ""
+      Value: !Sub "{{resolve:secretsmanager:CoreBackInternalTestingApiKey:SecretString}}" # pragma: allowlist secret
+
 
   IPVCoreInternalTestingApiUsagePlan:
     Type: AWS::ApiGateway::UsagePlan
