--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -112,6 +112,7 @@ Conditions:
     - !Equals [ !Ref AWS::AccountId, "130355686670" ]
     - !Equals [ !Ref AWS::AccountId, "175872367215" ]
   IsDev01: !Equals [ !Ref AWS::AccountId, "130355686670" ]
+  IsSharedDev: !Equals [ !Ref Environment, "dev" ]
   IsNotDevelopment: !Not [ !Condition IsDevelopment ]
   IsBuild: !Equals [ !Ref Environment, "build" ]
   IsDevPerf: !Equals [ !Ref Environment, "dev-perf" ]
@@ -507,8 +508,15 @@ Resources:
     Condition: IsTestApiEnv
     Properties:
       Enabled: true
-      Value: !Sub "{{resolve:secretsmanager:CoreBackInternalTestingApiKey:SecretString}}" # pragma: allowlist secret
-
+      Value: !Sub
+        - "{{resolve:secretsmanager:CoreBackInternalTestingApiKey:SecretString}}${env}" # pragma: allowlist secret
+        - env: !If
+            - IsDevelopment
+            - !If
+              - IsSharedDev
+              - ""
+              - !Sub "-${Environment}"
+            - ""
 
   IPVCoreInternalTestingApiUsagePlan:
     Type: AWS::ApiGateway::UsagePlan
