BAU: make pattern more specific for paths-ignore

--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths-ignore:
       - '**/README.md'
-      - '**/test/**'
+      - '/lambdas/*/src/test/**'
   workflow_dispatch:
 
 jobs:
