--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -6,7 +6,8 @@ on:
       - main
     paths-ignore:
       - '**/README.md'
-      - '/lambdas/*/src/test/**'
+      - 'lambdas/*/src/test/**'
+      - 'journey-map/**'
   workflow_dispatch:
 
 jobs:
