PYIC-8628: Adjust AppConfig tests to use "test" based feature flags and feature sets.

--- a/libs/test-data/src/main/resources/test-parameters.yaml
+++ b/libs/test-data/src/main/resources/test-parameters.yaml
@@ -358,7 +358,17 @@ core:
     sorryTechnicalErrorEnabled: false
     storedIdentityServiceEnabled: true
     sisVerificationEnabled: true
+    testFeatureFlag: false
   features:
+    testFeature:
+      self:
+        componentId: alternate-component-id
+    enableTestFeatureFlag:
+      featureFlags:
+        testFeatureFlag: true
+    disableTestFeatureFlag:
+      featureFlags:
+        testFeatureFlag: false
     storedIdentityService:
       featureFlags:
         storedIdentityServiceEnabled: true
