PYIC-8797: add identityProving metric when user transitions to the update_name or update_address subjourneys.
This is to enable more granular reporting for journeys/second for users who start an update journey either after reuse.

--- a/lambdas/process-journey-event/src/main/resources/statemachine/test/initial-journey-selection.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/test/initial-journey-selection.yaml
@@ -39,6 +39,9 @@ states:
       eventWithUnsetJourneyContext:
         targetState: ANOTHER_PAGE_STATE
         journeyContextToUnset: someContext
+      eventToTransitionToUpdateSubJourney:
+        targetJourney: UPDATE_NAME
+        targetState: START
 
   CRI_STATE:
     response:
