--- a/lambdas/process-cri-callback/build.gradle
+++ b/lambdas/process-cri-callback/build.gradle
@@ -56,6 +56,7 @@ task pactConsumerTests (type: Test) {
 	useJUnitPlatform()
 	include 'uk/gov/di/ipv/core/processcricallback/pact/**'
 	systemProperties['pact.rootDir'] = "$rootDir/build/pacts"
+	systemProperties['pact.content_type.override.application.x-www-form-urlencoded=text']
 }
 
 jacocoTestReport {
