PYIC-8800: skip address + fraud CRIs when a user drops out of f2f cri during a KBV mitigation due to an unexpected error
We shouldn't allow users to go through the fraud and address again CRIs during same-session and separate-session KBV mitigations after an unexpected error from the f2f CRI as they have already gone through it prior to that.

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/f2f-hand-off.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/f2f-hand-off.yaml
@@ -140,10 +140,10 @@ states:
         checkJourneyContext:
           mediumConfidence:
             targetJourney: NEW_P2_IDENTITY
-            targetState: START
+            targetState: KBV_MITIGATION_VIA_APP_SKIP_ADDRESS_FRAUD
           lowConfidence:
             targetJourney: NEW_P1_IDENTITY
-            targetState: START
+            targetState: KBV_MITIGATION_VIA_APP_SKIP_ADDRESS_FRAUD
       returnToRp:
         targetState: RETURN_TO_RP
 
