--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -13,6 +13,12 @@ on:
       - 'libs/test-helpers/**'
       - 'journey-map/**'
       - 'local-running/**'
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - ready_for_review
+      - synchronize
   workflow_dispatch:
 
 jobs:
@@ -42,17 +48,17 @@ jobs:
             echo "$file was changed"
           done
 
-  build-test-images-if-needed:
-    needs: check-if-api-tests-changed
-    if: ${{ needs.check-if-api-tests-changed.outputs.api-tests-changed == 'true' }}
-    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@main
-    with:
-      environment: ${{ github.event_name == 'workflow_dispatch' && 'dev01' || 'build' }}
-    secrets: inherit # pragma: allowlist secret
-    permissions:
-      id-token: write
-      packages: read
-      contents: read
+#  build-test-images-if-needed:
+#    needs: check-if-api-tests-changed
+#    if: ${{ needs.check-if-api-tests-changed.outputs.api-tests-changed == 'true' }}
+#    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@main
+#    with:
+#      environment: ${{ github.event_name == 'workflow_dispatch' && 'dev01' || 'build' }}
+#    secrets: inherit # pragma: allowlist secret
+#    permissions:
+#      id-token: write
+#      packages: read
+#      contents: read
 
   check-if-deploy-needed:
     runs-on: ubuntu-latest
@@ -81,69 +87,77 @@ jobs:
             journey-map/**
             local-running/**
 
-  deploy:
-    needs:
-      - build-test-images-if-needed
-      - check-if-deploy-needed
-    if: ${{ needs.check-if-deploy-needed.outputs.deploy-needed == 'true' || github.event_name == 'workflow_dispatch' }}
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    env:
-      AWS_REGION: eu-west-2
-      ENVIRONMENT: ${{ github.event_name == 'workflow_dispatch' && 'dev01' || 'build' }}
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v6
-        with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v5
-        with:
-          java-version: '21'
-          distribution: 'corretto'
-          cache: gradle
-
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.8"
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
-        with:
-          gradle-version: "8.13"
-
-      - name: Set up SAM CLI
-        uses: aws-actions/setup-sam@v2
-
-      - name: Fix SAM cryptography issue https://github.com/aws/aws-sam-cli/issues/4527
-        run: |
-          "$(dirname "$(readlink "$(which sam)")")/pip" install --force-reinstall "cryptography==38.0.4"
-
-      - name: Set up AWS creds For Pipeline
-        uses: aws-actions/configure-aws-credentials@v5
-        with:
-          role-to-assume: ${{ env.ENVIRONMENT == 'build' && secrets.GH_ACTIONS_ROLE_ARN || secrets.GH_ACTIONS_ROLE_ARN_DEV }}
-          aws-region: eu-west-2
-
-      - name: SAM validate
-        working-directory: ./deploy
-        run: sam validate --region "${{ env.AWS_REGION }}"
-
-      - name: SAM build and test
-        working-directory: ./deploy
-        run: sam build
+      - name: List changed files
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CHANGED_FILES: ${{ steps.check-if-should-deploy.outputs.all_changed_files }}
+        run: |
+          for file in $CHANGED_FILES; do
+            echo "$file was changed"
+          done
 
-      - name: Deploy SAM app
-        uses: govuk-one-login/devplatform-upload-action@v3.9
-        with:
-          artifact-bucket-name: ${{ env.ENVIRONMENT == 'build' && secrets.ARTIFACT_BUCKET_NAME || secrets.ARTIFACT_BUCKET_NAME_DEV }}
-          signing-profile-name: ${{ env.ENVIRONMENT == 'build' && secrets.SIGNING_PROFILE_NAME || secrets.SIGNING_PROFILE_NAME_DEV }}
-          working-directory: ./deploy
-          template-file: .aws-sam/build/template.yaml
+#  deploy:
+#    needs:
+#      - build-test-images-if-needed
+#      - check-if-deploy-needed
+#    if: ${{ needs.check-if-deploy-needed.outputs.deploy-needed == 'true' || github.event_name == 'workflow_dispatch' }}
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 15
+#    env:
+#      AWS_REGION: eu-west-2
+#      ENVIRONMENT: ${{ github.event_name == 'workflow_dispatch' && 'dev01' || 'build' }}
+#    permissions:
+#      id-token: write
+#      contents: read
+#    steps:
+#      - name: Checkout repo
+#        uses: actions/checkout@v6
+#        with:
+#          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+#
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v5
+#        with:
+#          java-version: '21'
+#          distribution: 'corretto'
+#          cache: gradle
+#
+#      - name: Set up Python 3.8
+#        uses: actions/setup-python@v6
+#        with:
+#          python-version: "3.8"
+#
+#      - name: Setup Gradle
+#        uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
+#        with:
+#          gradle-version: "8.13"
+#
+#      - name: Set up SAM CLI
+#        uses: aws-actions/setup-sam@v2
+#
+#      - name: Fix SAM cryptography issue https://github.com/aws/aws-sam-cli/issues/4527
+#        run: |
+#          "$(dirname "$(readlink "$(which sam)")")/pip" install --force-reinstall "cryptography==38.0.4"
+#
+#      - name: Set up AWS creds For Pipeline
+#        uses: aws-actions/configure-aws-credentials@v5
+#        with:
+#          role-to-assume: ${{ env.ENVIRONMENT == 'build' && secrets.GH_ACTIONS_ROLE_ARN || secrets.GH_ACTIONS_ROLE_ARN_DEV }}
+#          aws-region: eu-west-2
+#
+#      - name: SAM validate
+#        working-directory: ./deploy
+#        run: sam validate --region "${{ env.AWS_REGION }}"
+#
+#      - name: SAM build and test
+#        working-directory: ./deploy
+#        run: sam build
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#      - name: Deploy SAM app
+#        uses: govuk-one-login/devplatform-upload-action@v3.9
+#        with:
+#          artifact-bucket-name: ${{ env.ENVIRONMENT == 'build' && secrets.ARTIFACT_BUCKET_NAME || secrets.ARTIFACT_BUCKET_NAME_DEV }}
+#          signing-profile-name: ${{ env.ENVIRONMENT == 'build' && secrets.SIGNING_PROFILE_NAME || secrets.SIGNING_PROFILE_NAME_DEV }}
+#          working-directory: ./deploy
+#          template-file: .aws-sam/build/template.yaml
